--- a/text/3-image-ann.tex
+++ b/text/3-image-ann.tex
@@ -1,4 +1,4 @@
-\chapter{Convolutional neural networks for computer vision}
+\chapter{CNNs for computer vision}
 \label{image-ann}
 
 % different sizes
