--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -13,6 +13,29 @@
     year={1998}
 }
 
+@article{lenet5,
+  title={Gradient-Based learning applied to document recognition},
+  author={Yann LECUN and L{\'e}on BOTTOU and Yoshua BENGIO and Patrick HAFFNER},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={IEEE}
+}
+
+@article{vgg,
+  title     = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+  author    = {Karen SIMONYAN and Andrew ZISSERMAN},
+  journal   = {CoRR},
+  volume    = {abs/1409.1556},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.1556},
+  archivePrefix = {arXiv},
+  eprint    = {1409.1556},
+  timestamp = {Wed, 07 Jun 2017 14:41:51 +0200}
+}
+
 @Article{all-conv-net,
   title     = {Striving for Simplicity: The All Convolutional Net},
   author    = {Jost Tobias SPRINGERBERG and Alexey DOSOVITSKYI and Thomas BROX and Martin A. RIEDMILLER},
@@ -24,6 +47,20 @@
   eprint    = {1412.6806},
   timestamp = {Wed, 07 Jun 2017 14:42:59 +0200}
 }
+
+@Article{dropout,
+  title     = {Improving neural networks by preventing co-adaptation of feature detectors},
+  author    = {Geoffrey E. HINTON and Nitish SRIVASTAVA and Alex KRIZHEVSKY and Ilya SUTSKEVER and Ruslan SALAKHUTDINOV},
+  journal   = {CoRR},
+  volume    = {abs/1207.0580},
+  year      = {2012},
+  url       = {http://arxiv.org/abs/1207.0580},
+  archivePrefix = {arXiv},
+  eprint    = {1207.0580},
+  timestamp = {Wed, 07 Jun 2017 14:40:12 +0200}
+}
+
+
 
 @Article{batch-norm,
   title     = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
@@ -94,13 +131,47 @@
   timestamp = {Wed, 07 Jun 2017 13:42:30 +0100},
 }
 
+@article{nin,
+  author    = {Min LIN and Qiang CHEN and Shuicheng YAN},
+  title     = {Network In Network},
+  journal   = {CoRR},
+  volume    = {abs/1312.4400},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1312.4400},
+  archivePrefix = {arXiv},
+  eprint    = {1312.4400},
+  timestamp = {Thu, 08 Mar 2018 00:36:29 +0100}
+}
+
+@Article{resnext,
+  author    = {Saining XIE and Ross B. GIRSHICK and Piotr DOLL{\'{A}} and Zhuowen TU and Kaiming HE},
+  title     = {Aggregated Residual Transformations for Deep Neural Networks},
+  journal   = {CoRR},
+  volume    = {abs/1611.05431},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1611.05431},
+  archivePrefix = {arXiv},
+  eprint    = {1611.05431},
+  timestamp = {Wed, 07 Jun 2017 14:41:38 +0200}
+}
+
 @Article{selective-search,
   title = {Selective Search for Object Recognition},
   author = {Jasper R. R. UIJLINGS and Koen E. A. van de SANDE and Theo GEVERS and Arnold W. M. SMEULDERS},
-  journal = {International Journal  of Computer Vision},
+  journal = {International Journal of Computer Vision {IJCV}},
   volume = {104},
   year = {2013},
   pages = {154--171}
+}
+
+@Article{ILSVRC,
+  title = {ImageNet Large Scale Visual Recognition Challenge},
+  author = {Olga RUSSAKOVSY and Jia DENG and Hao SU and Jonathan KRAUSE and Sanjeev SATHEESH and Sean MA and Zhiheng HUANG and Andrej KARPATHY and Aditya KHOSLA and Michael BERNSTEIN and Alexander C. BERG and Fei-Fei LI},
+  journal   = {International Journal of Computer Vision {IJCV}},
+  volume={115},
+  number={3},
+  year={2015},
+  pages={211--252}
 }
 
 @Article{spp,
@@ -136,6 +207,14 @@
   author = {Ross GIRSHICK and Jeff DONAHUE and Trevor DARRELL and Jitendra MALIK},
   booktitle = {Conference on Computer Vision and Pattern Recognition ({CVPR})},
   year = {2014},
+}
+
+@conference{inception-v2,
+  title={Rethinking the inception architecture for computer vision},
+  author={Christian SZEGEDY and Vincent VANHOUCKE and Sergey IOFFE and Jon SHLENS and Zbigniew WOJNA},
+  booktitle={Conference on Computer Vision and Pattern Recognition ({CVPR})},
+  year={2016},
+  pages={2818--2826}
 }
 
 @conference{fast-rcnn,
@@ -189,7 +268,33 @@
 
 @conference{stoch-pooling,
   title = {Stochastic pooling for regularization of deep convolutional neural networks},
-  author = {Matthew ZEILER and Robert FERGUS},
+  author = {Matthew D. ZEILER and Robert FERGUS},
   booktitle = {Proceedings of the International Conference on Learning Representation {ICLR}},
   year = {2013}
+}
+
+@conference{zf-net,
+  title={Visualizing and understanding convolutional networks},
+  author={Matthew D. ZEILER and Robert FERGUS},
+  booktitle={European conference on computer vision {ECCV}},
+  pages={818--833},
+  year={2014},
+  organization={Springer}
+}
+
+@conference{googlenet,
+  title={Going deeper with convolutions},
+  author={Christian SZEGEDY and Wei LIU and Yangqing JIA and Pierre SERMANET and Scott REED and Dragomir ANGUELOV and Dumitru ERHAN and Vincent VANHOUCKE and Andrew RABINOVICH},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition {CVPR}},
+  year={2015},
+  organization={CVPR}
+}
+
+@inproceedings{bypass,
+  title={Traffic sign recognition with multi-scale convolutional networks},
+  author={Pierre SERMANET and Yann LECUN},
+  booktitle={The International Joint Conference on Neural Networks {IJCNN}},
+  pages={2809--2813},
+  year={2011},
+  organization={IEEE}
 }
