--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -1,50 +1,53 @@
 
 \begin{seznamzkratek}{ABCDE}
 
+	\novazkratka{AI}
+	      {AI}
+	      {Artificial intelligence}
 	\novazkratka{ANN}
 	      {ANN}
 	      {Artificial neural network}
 	\novazkratka{CNN}
 	      {CNN}
 	      {Convolutional neural network}
-	\novazkratka{R-CNN}
-	      {R-CNN}
-	      {Region-based convolutional neural network}
+	\novazkratka{DPM}
+	      {DPM}
+	      {Deformable part model}
+	\novazkratka{FAIR}
+	      {FAIR}
+	      {Facebook AI research}
+	\novazkratka{FC}
+	      {FC}
+	      {Fully connected}
+	\novazkratka{FPN}
+	      {FPN}
+	      {Feature pyramid network}
 	\novazkratka{GIS}
 	      {GIS}
 	      {Geographic information system}
 	\novazkratka{GRASS}
 	      {GRASS}
 	      {Geographic resources analysis support system}
-	\novazkratka{AI}
-	      {AI}
-	      {Artificial intelligence}
-	\novazkratka{FAIR}
-	      {FAIR}
-	      {Facebook AI research}
-	\novazkratka{SVM}
-	      {SVM}
-	      {Support Vector Machine}
-	\novazkratka{DPM}
-	      {DPM}
-	      {Deformable part model}
-	\novazkratka{RoI}
-	      {RoI}
-	      {Region of interest}
+	\novazkratka{ILSVRC}
+	      {ILSVRC}
+	      {ImageNet Large Scale Visual Recognition Challenge}
+	\novazkratka{R-CNN}
+	      {R-CNN}
+	      {Region-based convolutional neural network}
 	\novazkratka{ReLU}
 	      {ReLU}
 	      {Rectified Linear Unit}
-	\novazkratka{FC}
-	      {FC}
-	      {Fully connected}
-	\novazkratka{RPN}
-	      {RPN}
-	      {Region proposal network}
 	\novazkratka{ResNet}
 	      {ResNet}
 	      {Residual network}
-	\novazkratka{FPN}
-	      {FPN}
-	      {Feature pyramid network}
+	\novazkratka{RoI}
+	      {RoI}
+	      {Region of interest}
+	\novazkratka{RPN}
+	      {RPN}
+	      {Region proposal network}
+	\novazkratka{SVM}
+	      {SVM}
+	      {Support Vector Machine}
 	      
 \end{seznamzkratek}
