text CV introduction

--- a/text/2-bg.tex
+++ b/text/2-bg.tex
@@ -280,8 +280,8 @@ Mentioned experiments contained one more interesting event. A creation of a real
 
 The continuation of ResNet can be found for instance in an architecture called ResNeXt. Saining Xie and his team proposed ResNeXt in \cite{resnext} and it combines ResNet with modularized parallel pathways similar to those described in chapter \ref{googlenet}.
 
-\subsection{SqueezeNet}
-\label{squeezenet}
+% \subsection{SqueezeNet}
+% \label{squeezenet}
 
-\subsection{ENet}
-\label{enet}
+% \subsection{ENet}
+% \label{enet}
