--- a/text/3-image-ann.tex
+++ b/text/3-image-ann.tex
@@ -1,11 +1,18 @@
 \chapter{CNNs for computer vision}
 \label{image-ann}
 
+A paper Visualizing and Understanding Convolutional Networks by Matthew D. Zeiler and Robert Fergus \cite{zf-net} started with two sentences: \textit{Large Convolutional Network models have recently demonstrated impressive classification performance on the ImageNet benchmark. However there is no clear understanding of why they perform so well, or how they might be improved.}
+
+I tried to disperse such clouds a bit in the previous chapter, but now I would like to focus on another undertone connected with those statements. On their applications in the computer vision.
+
+Almost everything mentioned in chapter \ref{cnn} was already tied to the computer vision. The following text will briefly describe the field of computer vision itself and then introduce different tasks in that field. In each task, few \zk{CNN} models will be mentioned. This text structure was chosen also to depict the models evolution concluding in the one selected for the practical part of this thesis - an implementation into GRASS GIS.
+
 % different sizes
-% http://www.matthewzeiler.com/wp-content/uploads/2017/07/arxive2013.pdf
 
 \section{Understanding computer vision}
 \label{computer-vision}
+
+
 
 \section{Classification}
 \label{classification}
